/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package isspbftpb;

import "requestpb/requestpb.proto";

option go_package = "github.com/filecoin-project/mir/pkg/pb/isspbftpb";

// ============================================================
// Messages
// ============================================================

message Preprepare {
  uint64 sn = 1;
  uint64 view = 2;
  requestpb.Batch batch = 3;
  bool aborted = 4;
}

message Prepare {
  uint64 sn = 1;
  uint64 view = 2;
  bytes digest = 3;
}

message Commit {
  uint64 sn = 1;
  uint64 view = 2;
  bytes digest = 3;
}

message ViewChange {
  uint64             view       = 1;
  repeated PSetEntry p_set      = 2;
  repeated QSetEntry q_set      = 3;
}

message SignedViewChange {
  ViewChange view_change = 1;
  bytes      signature   = 2;
}

message PSetEntry {
  uint64 sn     = 1;
  uint64 view   = 2;
  bytes  digest = 3;
}

message QSetEntry {
  uint64 sn     = 1;
  uint64 view   = 2;
  bytes  digest = 3;
}

// ============================================================
// Events
// ============================================================

message ReqWaitReference {
  uint64   sn = 1;
  uint64 view = 2;
}

// ============================================================
// Status
// ============================================================

message Status {
  // TODO: Add the representation of the state of a PBFT instance here.
}
